# zentao-workflow

./: .gitignore  .release-ignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
.planning/: PROJECT.md  RELEASE-STATUS.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation-and-rename/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-core-pipeline/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  (+10 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/: config_template.properties  config_template.toml  tech_plan_template.md
references/: java_project_guide.md  react_project_guide.md
scripts/: chandao_fetch.py  requirements.txt  worklet.py
scripts/chandao_fetch/: __init__.py  __main__.py  client.py  config.py  exporter.py  models.py  service.py
scripts/java-src/: .gitignore  README.md  pom.xml
scripts/worklet/: __init__.py  __main__.py  client.py  config.py  env.py  exporter.py  input.py  models.py  service.py
tests/: __init__.py  conftest.py  test_config.py  test_exporter.py  test_readers.py  test_sources.py
(+59 files in other folders)
