[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "worklet"
version = "2.0.0"
description = "Developer workflow assistant - from requirement to code in one step"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "liuzl"}]
dependencies = [
    "requests>=2.32.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
]

[project.entry-points."worklet.sources"]
zentao = "worklet.sources.zentao:ZentaoSource"
markdown = "worklet.sources.markdown:MarkdownSource"
file = "worklet.sources.file:FileSource"
folder = "worklet.sources.folder:FolderSource"

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
